fix: fix the z-index issue and revert some custom-link back

--- a/theme/index.scss
+++ b/theme/index.scss
@@ -26,6 +26,8 @@ $major-brand-color: #ff351a;
 $second-color: #00ebeb;
 $react-brand-light: #1f92b9;
 $react-brand-dark: #42b8d2;
+$link-color: #0078fd;
+$link-color-dark: rgba(84, 169, 255, 1);
 
 // Base theme mixin with common properties
 @mixin theme-base($brand-color) {
@@ -103,6 +105,32 @@ $react-brand-dark: #42b8d2;
 .dark[data-subsite='react'] {
   @include subsite-theme($react-brand-dark);
 }
+
+// #region ===== custom-link-color start
+// in doc main content, we want to keep the link color blue
+@mixin custom-link-color($color) {
+  --custom-link-color: #{$color};
+}
+
+:root[data-subsite='guide'] {
+  .rspress-doc {
+    @include custom-link-color($link-color);
+    --rp-c-link: var(--custom-link-color);
+    a > code {
+      color: var(--custom-link-color);
+    }
+  }
+}
+.dark[data-subsite='guide'] {
+  .rspress-doc {
+    @include custom-link-color($link-color-dark);
+    --rp-c-link: var(--custom-link-color);
+    a > code {
+      color: var(--custom-link-color);
+    }
+  }
+}
+// #endregion ===== custom-link-color end
 
 // #region ======== home layout =========
 :root {
